# BehaviorGuard

./: .gitignore  Cargo.toml  README.md  build-android.sh
.github/workflows/: ci.yml  deploy-docs.yml
android/: BehaviorGuard.kt
android-app/: .gitignore  build.gradle.kts  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/jniLibs/: README.md
android-app/app/src/main/res/layout/: activity_main.xml
android-app/app/src/main/res/values/: strings.xml
android-app/app/src/main/res/xml/: data_extraction_rules.xml
android-app/gradle/: libs.versions.toml
android-app/lib/: build.gradle.kts  consumer-rules.pro
android-app/lib/src/main/java/com/behaviorgaurd/: BehaviorGuard.kt  BehaviorGuardManager.kt
android-app/lib/src/main/jniLibs/: README.md
docs/: api-reference.md  architecture.md  concepts.md  faq.md  glossary.md  integration-guide.md  intro.md  threat-model.md  troubleshooting.md
scripts/: validate_autoencoder.py
src/: error.rs  jni_api.rs  lib.rs
src/features/: extractor.rs  mod.rs  stats.rs
src/inference/: autoencoder.rs  mod.rs  scorer.rs
src/profile/: enrollment.rs  mod.rs  storage.rs
src/signals/: keystroke.rs  mod.rs  motion.rs  swipe.rs  touch.rs
tests/: extractor.rs  scorer.rs
training/: requirements.txt  train_autoencoder.py
website/: .gitignore  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/src/css/: custom.css
website/src/pages/: index.tsx
(+1 files in other folders)
