[package]
name = "behavior_guard"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "On-device behavioral biometrics SDK for Android"
license = "MIT"

[lib]
name = "behavior_guard"
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enables JNI exports and Android Keystore integration
jni = ["dep:jni"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = { version = "1", features = ["derive"] }
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
obfstr = "0.4"
thiserror = "1"
jni = { version = "0.21", optional = true }

[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
